# Drishya

./: .gitmodules  README.md  package-lock.json  package.json
backend/: index.js  package-lock.json  package.json
dirshya/: CMakeLists.txt  NanoDetPlus.depend  NanoDetPlus.layout  README.md  setup.sh  toggle.py
dirshya/src/: NanoDetPlus.cpp  main.cpp
public/: index.html
public/assets/css/: main.css
public/assets/images/home/: feature1.avif
src/: .env  App.css  App.js
src/Components/3dModel/: gltf.js  modelloader.js
src/Components/Contact/: Contact.js
src/Components/Description/: Desc.js
src/Components/Home/: Desc.js  Feature.js  Footer.js  Header.js  Home.js
src/Components/Payment/: Payment.js
